# SatelliteTrackerCpp

./: .gitignore  CMakeLists.txt  run.sh
backend/: CMakeLists.txt  run.sh
backend/src/: main.cpp  server.cpp
backend/src/domain/: GroundTrack.cpp  LL.h  Plot2D.cpp  Plot2D.h  TimeUtils.cpp  TimeUtils.h  Tle.cpp  Tle.h  Vector3D.h  sgp4Propagator.cpp  sgp4Propagator.h
backend/src/frames/: FrameTransforms.h
docs/: docs.md
frontend/SatelliteTracker/: ContentView.swift
frontend/SatelliteTracker/SatelliteTracker/: ContentView.swift  Info.plist  SatelliteTrackerApp.swift
frontend/SatelliteTracker/SatelliteTracker.xcodeproj/: project.pbxproj
frontend/SatelliteTracker/SatelliteTracker.xcodeproj/project.xcworkspace/xcuserdata/flombardo.xcuserdatad/: UserInterfaceState.xcuserstate
frontend/SatelliteTracker/SatelliteTracker.xcodeproj/xcuserdata/flombardo.xcuserdatad/xcschemes/: xcschememanagement.plist
frontend/SatelliteTracker/SatelliteTracker/Components/: InputPicker.swift  TabBar.swift
frontend/SatelliteTracker/SatelliteTracker/Extensions/: ColorsCodes.swift  FontTypes.swift
frontend/SatelliteTracker/SatelliteTracker/Services/: GroundTrackService.swift  GroundTrackViewModel.swift  Models.swift  SatelliteDetailsService.swift  SatelliteDetailsViewModel.swift
frontend/SatelliteTracker/SatelliteTracker/Views/: Alert.swift  GS.swift  Homepage.swift  Map3d.swift
frontend/SatelliteTracker/Views/: Homepage.swift  Settings.swift
src/: main.cpp
src/domain/: GroundTrack.cpp  GroundTrack.h  JD.h  Lla.h  OrbitState.h  Radec.h  ReferenceFrame.h  TimeUTC.h  TimeUtils.cpp  TimeUtils.h  Tle.cpp  Tle.h  Vector3D.h
src/frames/: EciToEcef.h  FrameTransforms.cpp  FrameTransforms.h  Teme2Ecef.h
src/propagation/: ConstantVelocityPropagator.h  OrbitPropagator.h  Sgp4Propagator.cpp  Sgp4Propagator.h  TlePropagator.h
src/tle/: TleParser.h
